// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic rendering case snapshot 1`] = `
.c0 {
  color: inherit;
  font-size: inherit;
  font-weight: 600;
  font-style: inherit;
}

<strong
  class="c0"
  style="color:orange;font-size:16px"
>
  some text1
  <span>
    some text2
  </span>
</strong>
`;

exports[`basic rendering case snapshot with theme 1`] = `
.c0 {
  color: red;
  font-size: 18;
  font-weight: 600;
  font-style: oblique;
}

<strong
  class="c0"
>
  some text1
  <span>
    some text2
  </span>
</strong>
`;
